[metadata]
name = pan-python
version = attr: pan.__version__
author = Kevin Steves
author_email = kevin.steves@pobox.com
description = Multi-tool set for Palo Alto Networks PAN-OS, Panorama, WildFire and AutoFocus
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/kevinsteves/pan-python
license = ISC
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)

[options]
package_dir =
    =lib
packages =
    pan
    pan/afapi
    pan/licapi
scripts =
    bin/panxapi.py
    bin/panconf.py
    bin/panwfapi.py
    bin/panafapi.py
    bin/panlicapi.py
install_requires =
python_requires = >=3.7
